# learn-py-local

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  autocmake.sh  build.properties  build.properties.local  hello.py
cmake/: hobot_util.cmake
include/learn_py_local/: learn_py_local.h
include/learn_py_local/utils/: helpers.h
scripts/: hello.py
src/: CMakeLists.txt  myswig.i
src/learn_py_local/: learn_py_local.cpp
src/utils/: helpers.cpp
test/: CMakeLists.txt  test_api.cpp
